<resources>
    <string name="app_name">inventario_RFID</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--  strings utilizados en el fragment_first.xml  -->
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <!--  strings utilizados para el fragment_second.xml -->
    <string name="bienvenido">Bienvenido</string>
    <string name="mi_usuario">Mi Usuario</string>
    <!--  strings utilizados en activity_scaner.xml  -->
    <string name="scanner">SCANNER</string>
    <string name="antena_conectada">Antena Conectada</string>
    <string name="id">ID</string>
    <string name="codigo">Código</string>
    <string name="item">Item</string>
    <string name='seleccionar'>Seleccionar</string>
    <!--  strings utilizados en activity_reportes.xml  -->
    <string name="datos">Datos</string>
    <string name="filtros">Filtros</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="fecha">Fecha</string>
    <!--  strings utilizados en activity_sincronizacion.xml  -->
    <string name="sincronizacion">Sincronización</string>
    <!--  strings utilizados para tabla en activity_configuracion.xml  -->
    <string name="configuracion">Configuración</string>
    <string name="nombre_categoria">Nombre Categoría</string>
    <string name="nombre_subcategoria">Nombre Subcategoría</string>
    <string name="nombre_item">Nombre Ítem</string>
    <!--  strings utilizados en activity_registrarse.xml  -->
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="ap_paterno">Apellido Paterno</string>
    <string name="ap_materno">Apellido Materno</string>
    <string name="rut">Rut: XXXXXXXX-X</string>
    <string name="respuesta_secreta">Respuesta</string>
    <string name="btn_ya_estoy_registrado">Ya estoy registrado</string>
    <!--  strings para los botones  -->
    <string name="btn_ingresar">INGRESAR</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="btn_olvide_mi_contrasena">OLVIDÉ MI CONTRASEÑA</string>
    <string name="btn_salir">SALIR</string>
    <string name="btn_volver">VOLVER</string>
    <string name="btn_importar">IMPORTAR</string>
    <string name="btn_exportar">EXPORTAR</string>
    <string name="btn_buscar_usuario">BUSCAR USUARIO</string>
    <string name="btn_recuperar_cuenta">RECUPERAR CUENTA</string>
    <string name="btn_conf_categoria">CATEGORIAS</string>
    <string name="btn_conf_sub_categoria">SUBCATEGORIAS</string>
    <string name="btn_conf_producto">ÍTEMS</string>
    <string name="btn_agregar">AGREGAR</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="btn_confirmar">CONFIRMAR</string>

    <string name="file_path" />
</resources>