<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="309dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/idNombreUser"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/idPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/idPasswordRepeat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/confirmar_contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/idNombre"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/idApPaterno"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/ap_paterno"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/idApMaterno"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/ap_materno"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/idRut"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/rut"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/idRespSecreta"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/respuesta_secreta"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <Spinner
                android:id="@+id/idPregSecreta"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:onClick="registrarse"
                android:text="@string/btn_registrarse"
                app:backgroundTint="#050505" />

            <Button
                android:id="@+id/buttonYaRegistrado"
                android:layout_width="233dp"
                android:layout_height="33dp"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                android:onClick="yaEstoyRegistrado"
                android:text="@string/btn_ya_estoy_registrado"
                android:textSize="12dp"
                app:backgroundTint="#6E6D6D" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>